<resources>
    <string name="app_name">colorMemory2</string>
    <string name="send">Envoyer</string>
    <string name="pseudo_text">Pseudo</string>
    <string name="passwd_text">Mot de passe</string>
    <string name="email_text">Email</string>
    <string name="title_register">Inscription</string>
    <string name="title_login">Connexion</string>
    <string name="btn_connection">Se connecter</string>
    <string name="btn_register">S\'inscrire</string>
    <string name="btn_link_register">cliquez ici pour vous inscrire</string>
    <string name="title_game">Simon</string>
    <string name="mode_easy">Facile</string>
    <string name="mode_hard">Difficile</string>
    <string name="mode_expert">Expert</string>
    <string name="mode_chrono">Chrono</string>
    <string name="classement">Classement</string>
    <string name="how_play">Comment jouer</string>
    <string name="passwd_confirmed_text">Confirmer le mot de passe</string>
    <string name="block1"></string>
    <string name="block2"></string>
    <string name="block3"></string>
    <string name="block4"></string>
    <string name="block5"></string>
    <string name="block6"></string>
    <string name="block7"></string>
    <string name="block8"></string>
    <string name="block9"></string>
    <string name="block10"></string>
    <string name="block11"></string>
    <string name="block12"></string>
    <string name="block13"></string>
    <string name="block14"></string>
    <string name="block15"></string>
    <string name="block16"></string>
    <string name="block17"></string>
    <string name="block18"></string>
    <string name="block19"></string>
    <string name="block20"></string>
    <string name="Nbvie">Nombre de vie : </string>
    <string name="Point">Point: </string>
    <string name="rules_modes">Pour jouer vous avez 4 modes de jeu qui ont chacun des spécificités :\n\n-Le mode facile : le multiplicateur de point vaut 1, vous avez 2 vies et le nombre de blocs éclairés démarre de 1 jusqu\'à 10.\n\n-Le mode difficile : le multiplicateur vaut 1,5, vous avez 2 vies et le nombre de blocs éclairés démarre de 3 jusqu\'à 15.\n\n-Le mode expert : le multiplicateur de point vaut 3, vous avez 3 vies et le nombre de blocs éclairés démarre de 5 jusqu\'à 20.</string>
</resources>